framework/source/resource/qx/website/scss/ui/_tabs.scss
.qx-tabs > ul {
  list-style: none;
  margin-bottom: 0;
  padding: 0;
}

.qx-tabs-float > ul:after {
  content: " ";
  display: block;
  clear: both;
}

.qx-tabs-float > ul > .qx-tabs-button {
  float: left;
}

.qx-tabs .qx-tabs-button:first-child {
  margin-left: rem(0);
}

.qx-tabs .qx-tabs-button {
  margin-bottom: rem(-1);
  cursor: pointer;
  border: rem(1) solid transparent;
  margin-left: rem(3);
}

.qx-tabs .qx-tabs-button > button {
  background-color: transparent;
  border: 0;
  color: $highlight-color;
  outline: none;
  cursor: pointer;
  padding: rem(8) rem(12);
  font-size: rem(13);
}

.qx-tabs .qx-tabs-button > button[disabled] {
  color: $highlight-color-disabled;
}

.qx-tabs .qx-tabs-button > button:focus {
  text-decoration: underline;
}

.qx-tabs .qx-tabs-button-active {
  border: rem(1) solid $border-color;
  @include border-radius(rem(2) rem(2) 0 0);
  @include background($background-color);
}

.qx-tabs .qx-tabs-button-active:after {
  display: block;
  position: relative;
  top: 1px;
  content: " ";
  background-color: $background-color;
  width: 100%;
  height: 1px;
}

.qx-tabs .qx-tabs-button:hover {
  border-bottom: rem(1) solid $border-color;
  @include border-radius(rem(2) rem(2) 0 0);
  background-color: darken($background-color, 10%);
}

.qx-tabs .qx-tabs-button-active:hover {
  border: rem(1) solid $border-color;
  border-bottom: rem(1) solid $background-color;
  @include background($background-color);
}

.qx-tabs .qx-tabs-button-active > button {
  color: black;
}

.qx-tabs .qx-tabs-container {
  border: rem(1) solid $border-color;
}

.qx-tabs .qx-tabs-page {
  padding: rem(10);
  @include user-select(text);
}


.qx-tabs .qx-tabs-button[disabled] {
  color: $highlight-color-disabled;
}

.qx-tabs .qx-tabs-button.qx-flex1 {
  text-align: center;
}

.qx-tabs .qx-tabs-justify > ul > .qx-tabs-button {
  display: table-cell;
  width: 1%;
  text-align: center;
  float: none;
  border-bottom-color: transparent;
  position: relative;
  @include transform(translate(0,rem(1)));
}

.qx-tabs .qx-tabs-justify > ul > .qx-tabs-button-active {
  border-bottom: rem(1) solid $background-color;
}

.qx-tabs .qx-tabs-right > ul > .qx-tabs-button {
  float: right;
}

.qx-tabs .qx-tabs-right > ul > .qx-tabs-button:first-child {
  margin-left: rem(3);
}

.qx-tabs .qx-tabs-right > ul > .qx-tabs-button:last-child {
  margin-left: rem(0);
}

